1. add output option 2. formatLog automatically switch to stream if valid 3. edit promise if writestream is valid 4. rule can be registered 5. add inte testing >_< 6. add README

--- a/test_proj/test_vpon.html
+++ b/test_proj/test_vpon.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- <title>Vpon - Data Drives Transactions</title> -->
     <meta charset="utf-8">
     <meta name="author" content="Vpon">
     <!-- <meta name="description" content=""> -->
@@ -49,14 +50,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <header>
         <div class="header-inner">
-    <h1><a href="" rel="home">Vpon</a></h1>
-    <h1><a href="" rel="home">Vpon</a></h1>
+    <h1><a href="">Vpon</a></h1>
+    <h1><a href="">Vpon</a></h1>
     <strong><a href="">Vpon</a></strong>
     <strong><a href="">Vpon</a></strong>
     <strong><a href="">Vpon</a></strong>
-    <strong><a href="" rel="home">Vpon</a></strong>
-    <strong><a href="" rel="home">Vpon</a></strong>
-    <strong><a href="" rel="home">Vpon</a></strong>
+    <strong><a href="">Vpon</a></strong>
+    <strong><a href="">Vpon</a></strong>
         <nav>
             <ul class="nav-main">
                 <li class=""><a href="solution">Solution</a>
